# actix-web-app

./: Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
src/: main.rs
src/back/: main.rs
src/back/models/: category.rs  mod.rs
src/back/routes/: categories.rs
src/back/services/: categories.rs  mod.rs
src/front/: index.html  index.js
src/front/components/: index.js
src/front/components/Categories/: Categories.js
src/front/components/Header/: Header.css  Header.js
src/models/: category.rs  image.rs  mod.rs
src/routes/: categories.rs
src/services/: categories.rs  images.rs  mod.rs
