[package]
name = "fullstack-demo-shop"
version = "0.1.0"
authors = ["Ilya Mashinin <lafferty0550@gmail.com>"]
edition = "2018"

[[bin]]
name = "back"
path = "src/back/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
mongodb = "1"
serde = "1"